--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,7 @@ body {padding-top: 50px;}
 }
 
 .lab:hover {
-  background-color: #C0C0C0;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .divide::after {
