--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,7 @@ body {padding-top: 50px;}
 }
 
 .divide {
+  padding-top: 10px; 
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   width: 100%;
 }
