--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,8 +26,12 @@ body {padding-top: 50px;}
   box-shadow: -5px 10px 10px rgba(0, 0, 0, 0.5);
 }
 
+.lab .report {
+  border: 1px solid red;
+}
+
 .divide {
-  padding-top: 10px; 
+  padding-top: 10px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   width: 100%;
 }
